# sailing_simulator

./: Cargo.toml
src/: main.rs
