[package]
name = "sailing_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["bevy-inspector-egui", "bevy-debug-text-overlay"]

[dependencies]
## BEVY 0.10 ##
# bevy = "0.10.1"
# bevy-inspector-egui = { version = "0.18", optional = true }
# bevy-debug-text-overlay = { version = "5.1.0", optional = true }

# BEVY 0.11
bevy = "0.11.3"
bevy-inspector-egui = { version = "0.20", optional = true }
bevy-debug-text-overlay = { version = "6.0.0", optional = true }

#bevy_smud = "0.5"

#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
#bevy-inspector-egui = { git = "https://github.com/Vrixyz/bevy-inspector-egui", branch = "bevy-main", optional = true }
#bevy_smud = "0.5"

[profile.dev.package."*"]
opt-level = 3