[package]
name = "sailing_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
# debug = ["bevy-inspector-egui", "bevy-debug-text-overlay"]


[dependencies]
bevy = "0.15.0"
bevy-inspector-egui = { version = "0.28" }
#bevy_smud = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3